--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -36,6 +36,7 @@
     </form>
 
     <p>Nemate račun? <a href="{% url 'main:register' %}">Registrirajte se ovdje</a></p>
+    <p>Log in sa podacima od super-usera ima posebno sucelje napravljeno za uredivanje korisnika</p>
 
 </body>
 </html>
