--- a/main/templates/main/admin/admin_homepage.html
+++ b/main/templates/main/admin/admin_homepage.html
@@ -1,6 +1,3 @@
-
-<!--trenutno se ne koristi nigdje ova datoteka, ovo je cisto template za homepage-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,15 +6,25 @@
 </head>
 <body>
 
-    <h1>This is our homepage</h1>
+    <h1>This is our Admin homepage</h1>
 
     {% if user.is_authenticated %}
-        <p>Vaše ime: {{ user.username }}</p>  
+        <p>Vaše ime: {{ user.username }}</p> 
 
         <form method="post" action="{% url 'logout' %}">
             {% csrf_token %}
             <button type="submit">Log out</button>
         </form>
+
+        <a href="{% url 'main:manage_users' %}">
+            <button>Upravljanje korisnicima</button>
+        </a>
+
+        <br>
+
+        <a href="{% url 'main:drink_list_view' %}">
+            <button>Lista pića</button>
+        </a>
 
 
     {% else %}
