--- a/main/templates/main/user/user_homepage.html
+++ b/main/templates/main/user/user_homepage.html
@@ -21,6 +21,12 @@
             <button type="button">Prikaz drugih korisnika</button>
         </a>
 
+        <br>
+
+        <a href="#">
+            <button type="button">Lista narudžbi</button>
+        </a>
+
 
     {% else %}
         <p>Niste prijavljeni.</p> 
