inicijalna lista narudzbi (nema jos funkcijonalnosti dodavanja )

--- a/main/templates/main/admin/lista_pica/list_view.html
+++ b/main/templates/main/admin/lista_pica/list_view.html
@@ -88,7 +88,7 @@
                 Količina: {{ pice.pice_kolicina_u_ml }} ml<br>
                 Alkohol: {% if pice.pice_sadrzi_alkohol %}Da{% else %}Ne{% endif %}<br>
                 Vegansko: {% if pice.pice_vegansko %}Da{% else %}Ne{% endif %}<br>
-                Cijena: {{ pice.pice_poj_cijena }} HRK -->
+                Cijena: {{ pice.pice_poj_cijena }} eura -->
            
             
         {% empty %}
