--- a/main/templates/main/user/user_homepage.html
+++ b/main/templates/main/user/user_homepage.html
@@ -23,7 +23,7 @@
 
         <br>
 
-        <a href="#">
+        <a href="{% url 'main:lista_narudzbi' %}">
             <button type="button">Lista narudžbi</button>
         </a>
 
