mala izmjena detalja

--- a/main/templates/main/user/lista_narudzbi/detalji_narudzbe/detalji_stavke_narudzbe/detail_view.html
+++ b/main/templates/main/user/lista_narudzbi/detalji_narudzbe/detalji_stavke_narudzbe/detail_view.html
@@ -5,7 +5,7 @@
   <p><strong>Broj stavke:</strong> {{ stavka.pk }}</p>
   <p><strong>Šifra narudžbe:</strong> {{ stavka.stavka_narudzba.narudzba_sifra }}</p>
   <p><strong>Količina:</strong> {{ stavka.stavka_kolicina_pica }}</p>
-  <p><strong>Cijena po komadu:</strong> {{ stavka.stavka_pice.pice_poj_cijena }} HRK</p>
-  <p><strong>Ukupna cijena:</strong> {{ stavka.stavka_ukupna_cijena }} HRK</p>
+  <p><strong>Cijena po komadu:</strong> {{ stavka.stavka_pice.pice_poj_cijena }} EUR</p>
+  <p><strong>Ukupna cijena:</strong> {{ stavka.stavka_ukupna_cijena }} EUR</p>
   
   <a href="{% url 'main:detalji_narudzbe' stavka.stavka_narudzba.narudzba_sifra %}">Povratak na detalje narudžbe</a>
