ispravljena funkcija registriranja korisnika tako da ako je korisnik konobar se kreira i redak u konobar tablici ne samo user

--- a/main/templates/main/user/user_homepage.html
+++ b/main/templates/main/user/user_homepage.html
@@ -27,6 +27,12 @@
             <button type="button">Lista narudžbi</button>
         </a>
 
+        <br>
+
+        <a href="{% url 'main:konobar_detalji' %}">
+            <button>Korisnički podaci</button>
+        </a>
+
 
     {% else %}
         <p>Niste prijavljeni.</p> 
