lista konobara iz admina, lista narudzbi iz liste konobara, lista stavki iz liste narudzbi

--- a/main/templates/main/admin/admin_homepage.html
+++ b/main/templates/main/admin/admin_homepage.html
@@ -26,6 +26,13 @@
             <button>Lista pića</button>
         </a>
 
+        <br>
+
+        <a href="{% url 'main:konobar_list_view' %}">
+            <button>Pregled podataka trenutnih konobara i narudžbi</button>
+        </a>
+
+
 
     {% else %}
         <p>Niste prijavljeni.</p> 
