--- a/main/templates/main/admin/lista_konobara/detalji_konobara/detalji_narudzbe/detail_view.html
+++ b/main/templates/main/admin/lista_konobara/detalji_konobara/detalji_narudzbe/detail_view.html
@@ -7,6 +7,11 @@
 <body>
     <h1>Detalji narudžbe {{ narudzba.narudzba_sifra }}</h1>
 
+    
+    <a href="{% url 'main:konobar_detail' user_pk=narudzba.narudzba_konobar.pk %}">
+        povratak
+    </a>
+    
     <p><strong>Datum kreiranja:</strong> {{ narudzba.narudzba_datum_kreiranja }}</p>
     <p><strong>Ukupna cijena:</strong> {{ narudzba.narudzba_ukupna_cijena }} EURA</p>
     <p><strong>Statut narudžbe:</strong> {% if narudzba.narudzba_placena %} Plaćena {% else %} Nije plaćena {% endif %}</p>
