--- a/main/templates/main/admin/lista_konobara/detalji_konobara/detalji_narudzbe/detail_view.html
+++ b/main/templates/main/admin/lista_konobara/detalji_konobara/detalji_narudzbe/detail_view.html
@@ -16,6 +16,17 @@
     <p><strong>Ukupna cijena:</strong> {{ narudzba.narudzba_ukupna_cijena }} EURA</p>
     <p><strong>Statut narudžbe:</strong> {% if narudzba.narudzba_placena %} Plaćena {% else %} Nije plaćena {% endif %}</p>
 
+
+    <br>
+    <br>
+
+    <form method="GET">
+        <label for="search_pice">Pretraži po imenu pića:</label>
+        <input type="text" id="search_pice" name="search_pice" value="{{ search_pice }}" placeholder="Unesite ime pića">
+        <button type="submit">Pretraži</button>
+    </form>
+    
+
     <h2>Stavke narudžbe</h2>
     <ul>
         {% for stavka in stavke %}
