--- a/main/templates/main/user/lista_narudzbi/detalji_narudzbe/detalji_stavke_narudzbe/detail_view.html
+++ b/main/templates/main/user/lista_narudzbi/detalji_narudzbe/detalji_stavke_narudzbe/detail_view.html
@@ -9,3 +9,18 @@
   <p><strong>Ukupna cijena:</strong> {{ stavka.stavka_ukupna_cijena }} EUR</p>
   
   <a href="{% url 'main:detalji_narudzbe' stavka.stavka_narudzba.narudzba_sifra %}">Povratak na detalje narudžbe</a>
+
+  <br>
+
+
+  {% if not stavka.stavka_narudzba.narudzba_placena %}
+  <h3>Brisanje stavke narudžbe</h3>
+<form method="get" action="{% url 'main:stavka_delete_view' stavka.stavka_sifra %}">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Obriši stavku</button>
+</form>
+
+{% else %}
+    
+    <button type="button" class="btn btn-danger" disabled>Stavka ne može biti obrisana jer je narudžba plaćena</button>
+{% endif %}
