--- a/main/templates/main/user/user_homepage.html
+++ b/main/templates/main/user/user_homepage.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+
+    <!-- path('', views.homepage, name='homepage'),  -->
+
+
 </head>
 <body>
 
