--- a/main/templates/main/user/lista_narudzbi/detalji_narudzbe/detalji_stavke_narudzbe/azuriranje_stavke/azuriranje_stavke.html
+++ b/main/templates/main/user/lista_narudzbi/detalji_narudzbe/detalji_stavke_narudzbe/azuriranje_stavke/azuriranje_stavke.html
@@ -6,11 +6,14 @@
 </head>
 <body>
     <h1>Ažuriraj količinu za {{ object.stavka_pice.pice_naziv }}</h1>
+    
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-success">Spremi promjene</button>
     </form>
-    <a href="{% url 'main:detalji_narudzbe' object.stavka_narudzba.narudzba_sifra %}" class="btn btn-secondary">Povratak</a>
+    
+    <a href="{% url 'main:stavka_narudzbe' pk=object.stavka_sifra %}" class="btn btn-secondary">Povratak</a>
+
 </body>
 </html>
