--- a/main/templates/main/admin/admin_homepage.html
+++ b/main/templates/main/admin/admin_homepage.html
@@ -32,6 +32,12 @@
             <button>Pregled podataka trenutnih konobara i narudžbi</button>
         </a>
 
+        <br>
+
+        <a href="{% url 'main:pica_list_view_REST' %}">
+            <button>Lista pića (REST)</button>
+        </a>
+
 
 
     {% else %}
